# ESP32-LoRaMac-node

./: .gitignore  README.md
components/Loramac/boards/ESP32/: board-config.h
src/ESP32/: CMakeLists.txt  i2c-board.c  rtc-board.c  spi-board.c  sx1276-board.c  uart-board.c
src/boards/ESP32/: board-config.h  board.c  delay-board.c  gpio-board.c  i2c-board.c
